--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	//implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
-	compileOnly 'io.springfox:springfox-swagger-ui:3.0.0'
-	compileOnly 'org.projectlombok:lombok'
+	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+	implementation 'org.projectlombok:lombok'
+	implementation 'org.springframework.cloud:spring-cloud-gcp-data-firestore'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
