add firestore configuration and aggregate category collection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+firebase.credential.path = /Users/imagemaker/Documents/personal/training/dy-app-184d4-firebase-adminsdk-b2xn6-d7c9abea52.json
