--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ dependencies {
 	//implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+	implementation 'com.google.firebase:firebase-admin:9.0.0'
 	implementation 'org.projectlombok:lombok'
-	implementation 'org.springframework.cloud:spring-cloud-gcp-data-firestore'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
