add some entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 firebase.credential.path = /Users/imagemaker/Documents/personal/training/dy-app-184d4-firebase-adminsdk-b2xn6-d7c9abea52.json
+firebase.config.collection.client = client
+firebase.config.collection.aggregates = aggregates
+firebase.config.collection.aggregate_category = aggregate_category
+firebase.config.collection.order = order
+firebase.config.collection.payment_method = payment_method
+firebase.config.collection.products = products
+firebase.config.collection.product_category = product_category
